--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -34,7 +34,7 @@
 .masthead-title a {
   font-size: 2rem;
   text-decoration: none;
-  color: #505050;
+  color: $body-color;
 }
 
 .masthead-subtitle {
