--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -16,7 +16,7 @@
   display: block;
   margin-top:3px;
   margin-bottom: 1rem;
-  color: #9a9a9a;
+  color: $light-gray-color;
   font-family: $sans-serif-font-family;
   font-size:0.8rem;
 }
