--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -9,7 +9,7 @@ pre {
 code {
   padding: .25em .5em;
   font-size: .8rem;
-  background-color: #f5f5f5;
+  background-color: $code-background-color;
   border-radius: 3px;
 }
 pre {
@@ -23,7 +23,7 @@ pre {
   white-space: pre-wrap;
   word-break: break-all;
   word-wrap: break-word;
-  background-color: #f5f5f5;
+  background-color: $code-background-color;
 }
 pre code {
   padding: 0;
