#86 Add SCSS variables for various styles

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,9 +5,14 @@ $sans-serif-font-family: "Quattrocento Sans", sans-serif;
 $serif-font-family:      "PT Serif", Georgia, "Times New Roman", serif;
 $code-font-family:       "Source Code Pro", monospace;
 
-$dark-gray-color:  #333;
-$light-gray-color: #999;
-$body-color:       #515151;
+$dark-gray-color:        #333;
+$light-gray-color:       #999;
+$extra-light-gray-color: #ccc;
+$body-color:             #505050;
+$code-background-color:  #f5f5f5;
+$link-color:             black;
+
+$pagination-button-color: #e0e0e0;
 
 $icon-transition-time: .5s;
 $envelope-color:  #f39c12;
