#89 Replace hardcoded responsiveness styling configurations with SCSS variables

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,7 +9,7 @@ body {
   line-height: 1.75rem;
 }
 
-@media (max-width: 30em) {
+@media (max-width: $elements-responsive-width) {
   body {
     font-size: 14px;
     line-height: 1.5rem;
