--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -21,7 +21,7 @@
   font-size:0.8rem;
 }
 
-@media (max-width: 30rem) {
+@media (max-width: $elements-responsive-width) {
   .posts h1 {
     font-size: 1.5rem;
   }
