--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,23 +11,9 @@ layout: default
 <article>
   {{ content }}
 </article>
-<span class="post-date">
-  {{ site.data.settings.post_date_prefix }}
-  {% assign d = page.date | date: "%-d"  %}
-  {{ page.date | date: "%B" }}
-  {% case d %}
-    {% when '1' or '21' or '31' %}{{ d }}st
-    {% when '2' or '22' %}{{ d }}nd
-    {% when '3' or '23' %}{{ d }}rd
-    {% else %}{{ d }}th{% endcase %},
-  {{ page.date | date: "%Y" }}
-  by
-  {% if page.author %}
-    {{ page.author }}
-  {% else %}
-    {{ site.author }}
-  {% endif %}
-</span>
+{% if site.hide_post_date != true %}
+  {% include post-date.html %}
+{% endif %}
 {% if site.hide_post_share != true %}
   {% include social-sharing.html %}
 {% endif %}
