#89 Add styling for footer-description

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -44,3 +44,16 @@
 .pagination-active:hover {
   background-color: $pagination-button-color;
 }
+
+/*
+  Footer
+*/
+
+.footer-description {
+  display: block;
+  margin-top:3px;
+  margin-bottom: 1rem;
+  color: $light-gray-color;
+  font-family: $sans-serif-font-family;
+  font-size:0.8rem;
+}
