#89 Move footer-description styling to _default.scss file; change posts styling to posts-container and move to _home.scss file

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -98,3 +98,12 @@
 .footer a:hover {
   color: $dark-gray-color;
 }
+
+.footer-description {
+  display: block;
+  margin-top:3px;
+  margin-bottom: 1rem;
+  color: $light-gray-color;
+  font-family: $sans-serif-font-family;
+  font-size:0.8rem;
+}
