#87 Change posts styling to posts-container in home.html and archive.html layouts

--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -1,11 +1,9 @@
 ---
 layout: default
-title: Home
 ---
 
-<ul class="posts">
+<ul class="posts-container">
   {% for post in site.posts %}
-
     {% unless post.next %}
       <h3>{{ post.date | date: '%Y' }}</h3>
     {% else %}
@@ -15,11 +13,9 @@ title: Home
         <h3>{{ post.date | date: '%Y' }}</h3>
       {% endif %}
     {% endunless %}
-
     <li itemscope>
       <a href="{{ site.github.url }}{{ post.url }}">{{ post.title }}</a>
       <p class="post-date"><span><i class="fa fa-calendar" aria-hidden="true"></i> {{ post.date | date: "%B %-d" }} - <i class="fa fa-clock-o" aria-hidden="true"></i> {% include read-time.html %}</span></p>
     </li>
-
   {% endfor %}
 </ul>
