--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,9 @@
 ---
 layout: default
-title: Home
 ---
 
 {% for post in paginator.posts %}
-  <div class="posts">
+  <div class="posts-container">
     <h1>
       <a href="{{ site.github.url }}{{ post.url }}">{{ post.title }}</a>
     </h1>
