--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   <body>
     <div class="container">
       {% include header.html %}
-      <div class="post-container">
+      <div class="content-container">
         {{ content }}
       </div>
       {% include footer.html %}
