#89 Change post-container to content-container

--- a/_sass/_default.scss
+++ b/_sass/_default.scss
@@ -8,6 +8,10 @@
   width: 615px;
 }
 
+.content-container {
+  margin-bottom: 4rem;
+}
+
 /*48em*/
 
 @media (max-width: $container-responsive-width) {
