--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+<h1>
+  {{ page.title }}
+</h1>
+
 <ul class="posts-container">
   {% for post in site.posts %}
     {% unless post.next %}
