--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="header">
   <h3 class="header-title">
-    <a href="{{ site.github.url }}/">{{ site.title }}</a>
+    <a href="{{ site.url }}{{ site.baseurl }}/">{{ site.title }}</a>
     <small class="header-subtitle">{{ site.description }}</small>
     {% include menu.html %}
   </h3>
