--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,12 +11,12 @@ layout: default
 <article>
   {{ content }}
 </article>
-{% if site.hide_post_date != true %}
-  {% include post-date.html %}
-{% endif %}
-{% if site.hide_post_share != true %}
-  {% include social-sharing.html %}
-{% endif %}
+#{% if site.hide_post_date != true %}
+#  {% include post-date.html %}
+#{% endif %}
+#{% if site.hide_post_share != true %}
+#  {% include social-sharing.html %}
+#{% endif %}
 {% if site.hide_related_posts != true %}
   {% include related-posts.html %}
 {% endif %}
