--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="footer">
   {% include social-icons.html %}
-  <div class="footer-description"><a href="{{ site.github.url }}/"></a></div>
+  <div class="footer-description"><a href="{{ site.github.url }}/"> Test footer </a></div>
 </footer>
