--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
       <div class="content-container">
         {{ content }}
       </div>
+       {%include footer.html} 
     </div>
   </body>
 </html>
