--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
       <div class="content-container">
         {{ content }}
       </div>
-      {%include footer.html} 
+      {%include footer.html %} 
     </div>
   </body>
 </html>
