--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,11 @@ layout: default
 title: Home
 ---
 <h1>
-  Below are some of the tutorals to support some of the papers I have written.
+  Hello and welcome to my tutorials!
 </h1>
+<p> 
+  Here you can find a multitude of tutorials that support the papers I have been working on. You can also find and dowload the codes directly from my github{https://github.com/dlafarga/calc_3D_EOFs}
+</p>
 
 {% for post in paginator.posts %}
 <div class="posts">
