--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,8 @@ title: Home
   Hello and welcome to my tutorials!
 </h1>
 <p> 
-  Here you can find a multitude of tutorials that support the papers I have been working on. You can also find and dowload the codes directly from my [github.](https://github.com/dlafarga/calc_3D_EOFs)
+  Here you can find a multitude of tutorials that support the papers I have been working on. You can also find and dowload the codes directly from my
+  <a href="https://github.com/dlafarga/calc_3D_EOFs">github.</a>
 </p>
 
 {% for post in paginator.posts %}
