--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,6 +74,13 @@ img {
   margin-right: 1em;
 }
 
+.image-right{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  float: right;
+}
+
 blockquote {
   margin: 10px 20px 10px;
   padding: 0px 15px;
