--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,9 @@
       });
   </script>
   <!-- Google Analytics -->
+  {% if jekyll.environment == 'production' %}
   {% include google-analytics.html %}
+  {% endif %}
   <!-- Use Jekyll SEO plugin -->
   {% seo %}
 </head>
