Edit post date on home page

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,8 +9,8 @@ layout: default
     </h1>
     <h2 class="post-date">
       Written by
-      {% if page.author %}
-        {{ page.author }}
+      {% if post.author %}
+        {{ post.author }}
       {% else %}
         {{ site.author }}
       {% endif %}
