--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
       <a href="{{ site.github.url }}{{ post.url }}">{{ post.title }}</a>
     </h1>
     <h2 class="post-date">
-      Written by
+      Posted by
       {% if post.author %}
         {{ post.author }}
       {% else %}
