change twitter icon to X icon

--- a/_sass/_social-icons.scss
+++ b/_sass/_social-icons.scss
@@ -22,9 +22,9 @@
   @include social-media-icon($envelope-color, $icon-transition-time);
 }
 
-.fa-twitter {
+.fa-x-twitter {
   padding: 5px;
-  @include social-media-icon($twitter-color, $icon-transition-time);
+  @include social-media-icon($x-twitter-color, $icon-transition-time);
 }
 
 .fa-instagram {
