--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,7 +20,7 @@ $elements-responsive-width:  30em;
 
 $icon-transition-time: .5s;
 $envelope-color:       #f39c12;
-$twitter-color:        #00aced;
+$x-twitter-color:      black;
 $instagram-color:      #375989;
 $github-color:         #343434;
 $linkedin-color:       #0073a4;
