--- a/_includes/social-icons.html
+++ b/_includes/social-icons.html
@@ -1,8 +1,8 @@
 {% for item in site.data.settings.social %}
   {% assign first_char = item.link | slice: 0 %}
-  {% if first_char == '/' %}
+  {% if first_char != 'h' %}
     <a href="{{ site.baseurl }}{{ item.link }}"><i class="fa fa-{{ item.icon }}" aria-hidden="true"></i></a>
   {% else %}
-    <a href="{{ item.link }}" target="_blank"><i class="fa fa-{{ item.icon }}" aria-hidden="true"></i></a>
+    <a href="{{ item.link }}" target="_blank"><i class="fa-brands fa-{{ item.icon }}" aria-hidden="true"></i></a>
   {% endif %}
 {% endfor %}
